UI navigation improvements: - adding 'currentUser' JavaScript global variable which provide id and domainId attributes - adding defaultStringIfNotDefined(String:string[, String:defaulString]) to StringUtil - adding to sp.element   . isVisible(Element:element)   . isHidden(Element:element)   . offset(*:elementOrCssSelector, Boolean:fullInView, Element:parent)   . querySelector(String:cssSelector[, Element:fromElement])   . querySelectorAll(String:cssSelector[, Element:fromElement])   . scrollTo(*:elementOrCssSelector, Boolean:fullInView, Element:parent)   . setScrollTo(Number: scrollTop, Element:parent) - adding spWindow with   . loadHomePage()   . loadPersonalSpace([Boolean:loadOnlyNavigation])   . loadSpace(String:spaceId)   . loadComponent(String:componentId)   . loadContent(String:url)   . loadPermalink(String:url)   . loadLink(String:url)   . setupSpace(String:id)   . setupComponent(String:id) - adding to spLayout:   . getSplashContentUrl(String:url)   . getBody().getToggles().hideNavigationToggle()   . getBody().getToggles().showNavigationToggle() - updating spLayout methods:   . getBody().getNavigation().hide([Boolean:withToggle]) - wiring spaceHomePage.jsp - wiring silverpeas-permalink AngularJS directive - wiring GoTo (Permalinks) servlets - wiring AutoRedirectServlet - wiring User Notification pages - wiring Map of Site - wiring Ticker - wiring GlobalSearch results - wiring todo - wiring portlets - moving methods of spUserNavigation to spNavigation and deleting spUserNavigation - fixing some problems around spLayout - deleting method spLayout.loadBodyNavigationAndHeaderParts(...) - fixing clipboard opening - wiring favorite links - wiring my favorites